--- a/OderFoodOnline/src/Supermarket/login.form
+++ b/OderFoodOnline/src/Supermarket/login.form
@@ -109,7 +109,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/orderfoodonline/customer.png"/>
+              <Image iconType="3" name="/Supermarket/customer.png"/>
             </Property>
           </Properties>
         </Component>
