--- a/OderFoodOnline/src/Supermarket/Products.form
+++ b/OderFoodOnline/src/Supermarket/Products.form
@@ -447,6 +447,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="X"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel4MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
