--- a/OderFoodOnline/src/Supermarket/Splash.form
+++ b/OderFoodOnline/src/Supermarket/Splash.form
@@ -119,7 +119,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Supermarket/customer.png"/>
+              <Image iconType="3" name="/Supermarket/icon/customer.png"/>
             </Property>
           </Properties>
         </Component>
